--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,273 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>format: day</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>forecast</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>location:59_76</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Start : 20220630</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>30</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>30</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>30</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>30</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>30</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>30</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>30</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          format: day   hour  forecast  value\n",
-       "0      location:59_76    NaN       NaN    NaN\n",
-       "1   Start : 20220630     NaN       NaN    NaN\n",
-       "2                  30  200.0       6.0    4.0\n",
-       "3                  30  200.0       7.0    4.0\n",
-       "4                  30  200.0       8.0    3.0\n",
-       "5                  30  200.0       9.0    3.0\n",
-       "6                  30  200.0      10.0    3.0\n",
-       "7                  30  200.0      11.0    3.0\n",
-       "8                  30  200.0      12.0    1.0\n",
-       "9                  30  200.0      13.0    1.0"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file_path = '건국동_하늘상태_20220630_20220831.csv'\n",
-    "\n",
-    "data = pd.read_csv(file_path, encoding='utf-8')\n",
-    "data.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>day</th>\n",
-       "      <th>time</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         day  time     value\n",
-       "0 2022-07-01     0  1.000000\n",
-       "1 2022-07-01     1  1.000000\n",
-       "2 2022-07-01     2  1.000000\n",
-       "3 2022-07-01     3  1.000000\n",
-       "4 2022-07-01     4  1.000000\n",
-       "5 2022-07-01     5  1.000000\n",
-       "6 2022-07-01     6  1.000000\n",
-       "7 2022-07-01     7  3.000000\n",
-       "8 2022-07-01     8  4.000000\n",
-       "9 2022-07-01     9  4.000000"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "processed_data = process_data(file_path)\n",
-    "processed_data.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_file_path = file_path.split('.')[0] + '_filtered.csv'\n",
-    "processed_data.to_csv(new_file_path, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "file_dir = './data/'\n",
+    "file_list = os.listdir(file_dir)\n",
+    "\n",
+    "for file_name in file_list:\n",
+    "    processed_data = process_data(os.path.join(file_dir, file_name))\n",
+    "    new_file_path = os.path.join(file_dir, file_name).split('.')[0] + '_filtered.csv'\n",
+    "    processed_data.to_csv(new_file_path, index=False)"
+   ]
   }
  ],
  "metadata": {
