--- a/model.ipynb
+++ b/model.ipynb
@@ -2,106 +2,124 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 개별 모델을 각 목표 변수에 대해 훈련시키고 예측 수행\n",
-    "def train_and_predict_individual_models(models, X_train, y_train, X_test):\n",
-    "    import numpy as np\n",
-    "    predictions = []\n",
-    "    for target_index in range(y_train.shape[1]):\n",
-    "        target_predictions = np.zeros(X_test.shape[0])\n",
-    "        for model in models:\n",
-    "            model.fit(X_train, y_train.iloc[:, target_index])\n",
-    "            target_predictions += model.predict(X_test)\n",
-    "        predictions.append(target_predictions / len(models))\n",
-    "    return np.column_stack(predictions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/yoonjae/Library/Caches/pypoetry/virtualenvs/gist-campus-ems-ntfQ-Uq6-py3.11/lib/python3.11/site-packages/sklearn/preprocessing/_encoders.py:972: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
-      "  warnings.warn(\n"
+      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n",
+      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n",
+      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
-    "from sklearn.svm import SVR\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
     "\n",
-    "# 데이터 로드\n",
-    "file_path = \"./merged_result.csv\"\n",
-    "data = pd.read_csv(file_path)\n",
+    "# 1. 데이터 로드\n",
+    "data = pd.read_csv(\"./merged_result.csv\")\n",
     "\n",
-    "# 특성 및 목표 변수 선택\n",
-    "features = ['강수확률', '일최저기온', '1시간기온', '하늘상태', '일최고기온', '습도', '풍향', '1시간강수량', '풍속']\n",
-    "target_vars = ['수평면', '외기온도', '경사면', '모듈온도']\n",
-    "X = data[features]\n",
-    "y = data[target_vars]\n",
+    "# 2. 특징 전처리\n",
+    "data['풍향'] = np.sin(np.deg2rad(data['풍향']))\n",
+    "time_ohe = pd.get_dummies(data['time'], prefix='time')\n",
+    "data_ohe = pd.concat([data, time_ohe], axis=1)\n",
     "\n",
-    "# 범주형 특성 원-핫 인코딩\n",
-    "encoder = OneHotEncoder(drop='first', sparse=False)\n",
-    "encoded_features = encoder.fit_transform(X[['하늘상태']])\n",
-    "encoded_df = pd.DataFrame(encoded_features, columns=encoder.get_feature_names_out(['하늘상태']))\n",
-    "X_encoded = pd.concat([X.drop(columns=['하늘상태']), encoded_df], axis=1)\n",
+    "features_to_scale = ['강수확률', '일최저기온', '하늘상태', '일최고기온', '습도', '풍향', '풍속']\n",
+    "scaler = MinMaxScaler()\n",
+    "data_ohe[features_to_scale] = scaler.fit_transform(data_ohe[features_to_scale])\n",
     "\n",
-    "# 학습 및 테스트 세트 분할\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_encoded, y, test_size=0.2, random_state=42)\n",
+    "# 중요한 피처로 간주하여 별도로 스케일링\n",
+    "important_features = ['1시간기온', '1시간강수량'] + [f'time_{i}' for i in range(24)]\n",
+    "scaler_important = MinMaxScaler(feature_range=(0.5, 1))\n",
+    "data_ohe[important_features] = scaler_important.fit_transform(data_ohe[important_features])\n",
     "\n",
-    "# 개별 모델 정의\n",
-    "models = [\n",
-    "    RandomForestRegressor(random_state=42),\n",
-    "    GradientBoostingRegressor(random_state=42),\n",
-    "    SVR(kernel='linear')\n",
-    "]\n",
+    "# 3. 데이터 분할\n",
+    "input_features = features_to_scale + important_features\n",
+    "target_variables = ['수평면', '외기온도', '경사면', '모듈온도']\n",
+    "X = data_ohe[input_features]\n",
+    "y = data_ohe[target_variables]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "ensemble_predictions_individual = train_and_predict_individual_models(models, X_train, y_train, X_test)\n",
+    "# 4. 모델 학습 및 하이퍼파라미터 튜닝\n",
+    "param_grid = {\n",
+    "    'n_estimators': [50, 100, 150],\n",
+    "    'learning_rate': [0.01, 0.05, 0.1],\n",
+    "    'max_depth': [3, 4, 5],\n",
+    "    'subsample': [0.8, 0.9, 1],\n",
+    "    'max_features': ['sqrt', 'log2', None]\n",
+    "}\n",
+    "grid_search = GridSearchCV(GradientBoostingRegressor(random_state=42), param_grid, cv=5, n_jobs=-1, verbose=1)\n",
     "\n",
-    "# 성능 평가\n",
-    "ensemble_mse_individual = mean_squared_error(y_test, ensemble_predictions_individual)\n",
-    "ensemble_mae_individual = mean_absolute_error(y_test, ensemble_predictions_individual)"
+    "# 5. 테스트셋에서의 예측\n",
+    "predictions = {}\n",
+    "for target in target_variables:\n",
+    "    grid_search.fit(X_train, y_train[target])\n",
+    "    predictions[target] = grid_search.predict(X_test)\n",
+    "\n",
+    "# 예측 결과와 실제 값 비교\n",
+    "comparison_dfs = {}\n",
+    "for target in target_variables:\n",
+    "    comparison_dfs[target] = pd.DataFrame({\n",
+    "        f\"Actual {target}\": y_test[target],\n",
+    "        f\"Predicted {target}\": predictions[target]\n",
+    "    })\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(15563.985340694793,\n",
-       " 55.90053576223588,\n",
-       " array([581.21729013,  36.12380304, 577.03424936,  43.58063132]),\n",
-       " array([495. ,  36.2, 546. ,  42.1]))"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Actual 외기온도  Predicted 외기온도\n",
+      "1318         24.2       24.969775\n",
+      "899          43.0       41.315395\n",
+      "439          24.5       26.471294\n",
+      "560          23.9       29.403372\n",
+      "433          24.6       25.136857\n",
+      "      Actual 수평면  Predicted 수평면\n",
+      "1318         0.0       0.286919\n",
+      "899        626.0     554.205602\n",
+      "439         42.0      61.468814\n",
+      "560         33.0     140.669069\n",
+      "433          0.0       2.910868\n",
+      "      Actual 모듈온도  Predicted 모듈온도\n",
+      "1318         22.8       24.193406\n",
+      "899          52.2       46.031512\n",
+      "439          22.8       24.467112\n",
+      "560          23.0       27.138005\n",
+      "433          23.0       23.951652\n",
+      "      Actual 경사면  Predicted 경사면\n",
+      "1318         0.0       6.736264\n",
+      "899        674.0     502.709700\n",
+      "439         27.0      44.048440\n",
+      "560         32.0     111.688614\n",
+      "433          0.0      15.789200\n"
+     ]
     }
    ],
    "source": [
-    "# 테스트 데이터 중 하나의 샘플 인덱스 선택\n",
-    "sample_index = 5\n",
-    "\n",
-    "# 해당 샘플에 대한 예측값과 실제값\n",
-    "sample_ensemble_prediction_individual = ensemble_predictions_individual[sample_index]\n",
-    "sample_actual_value_individual = y_test.iloc[sample_index].values\n",
-    "\n",
-    "ensemble_mse_individual, ensemble_mae_individual, sample_ensemble_prediction_individual, sample_actual_value_individual"
+    "# 예: '외기온도'에 대한 비교 결과 출력\n",
+    "print(comparison_dfs['외기온도'].head())\n",
+    "print(comparison_dfs['수평면'].head())\n",
+    "print(comparison_dfs['모듈온도'].head())\n",
+    "print(comparison_dfs['경사면'].head())"
    ]
   },
   {
@@ -114,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gist-campus-ems-32oiAFMj-py3.11",
+   "display_name": "gist-campus-ems-ntfQ-Uq6-py3.11",
    "language": "python",
    "name": "python3"
   },
