시간 원 핫 인코딩 철회

--- a/solar-power/model.ipynb
+++ b/solar-power/model.ipynb
@@ -34,23 +34,21 @@
     "\n",
     "# 2. 특징 전처리\n",
     "data['풍향'] = np.sin(np.deg2rad(data['풍향']))\n",
-    "time_ohe = pd.get_dummies(data['time'], prefix='time')\n",
-    "data_ohe = pd.concat([data, time_ohe], axis=1)\n",
     "\n",
     "features_to_scale = ['강수확률', '일최저기온', '하늘상태', '일최고기온', '습도', '풍향', '풍속']\n",
     "scaler = MinMaxScaler()\n",
-    "data_ohe[features_to_scale] = scaler.fit_transform(data_ohe[features_to_scale])\n",
+    "data[features_to_scale] = scaler.fit_transform(data[features_to_scale])\n",
     "\n",
     "# 중요한 피처로 간주하여 별도로 스케일링\n",
-    "important_features = ['1시간기온', '1시간강수량'] + [f'time_{i}' for i in range(24)]\n",
+    "important_features = ['1시간기온', '1시간강수량', 'time']\n",
     "scaler_important = MinMaxScaler(feature_range=(0.5, 1))\n",
-    "data_ohe[important_features] = scaler_important.fit_transform(data_ohe[important_features])\n",
+    "data[important_features] = scaler_important.fit_transform(data[important_features])\n",
     "\n",
     "# 3. 데이터 분할\n",
     "input_features = features_to_scale + important_features\n",
     "target_variables = ['수평면', '외기온도', '경사면', '모듈온도']\n",
-    "X = data_ohe[input_features]\n",
-    "y = data_ohe[target_variables]\n",
+    "X = data[input_features]\n",
+    "y = data[target_variables]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# 4. 모델 학습 및 하이퍼파라미터 튜닝\n",
@@ -75,7 +73,7 @@
     "    comparison_dfs[target] = pd.DataFrame({\n",
     "        f\"Actual {target}\": y_test[target],\n",
     "        f\"Predicted {target}\": predictions[target]\n",
-    "    })\n"
+    "    })"
    ]
   },
   {
