중요 특징 변경 -> time

--- a/solar-power/model.ipynb
+++ b/solar-power/model.ipynb
@@ -40,7 +40,7 @@
     "data[features_to_scale] = scaler.fit_transform(data[features_to_scale])\n",
     "\n",
     "# 중요한 피처로 간주하여 별도로 스케일링\n",
-    "important_features = ['1시간기온', '1시간강수량', 'time']\n",
+    "important_features = ['time']\n",
     "scaler_important = MinMaxScaler(feature_range=(0.5, 1))\n",
     "data[important_features] = scaler_important.fit_transform(data[important_features])\n",
     "\n",
