조기종료 과적합방지

--- a/solar-power/model.ipynb
+++ b/solar-power/model.ipynb
@@ -2,56 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n",
-      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n",
-      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "# 1. 데이터 로드\n",
+    "# 데이터 전처리\n",
     "data = pd.read_csv(\"./merged_result.csv\")\n",
-    "\n",
-    "# 2. 특징 전처리\n",
     "data['풍향'] = np.sin(np.deg2rad(data['풍향']))\n",
     "\n",
     "features_to_scale = ['강수확률', '일최저기온', '하늘상태', '일최고기온', '습도', '풍향', '풍속']\n",
     "scaler = MinMaxScaler()\n",
     "data[features_to_scale] = scaler.fit_transform(data[features_to_scale])\n",
     "\n",
-    "# 중요한 피처로 간주하여 별도로 스케일링\n",
     "important_features = ['time']\n",
     "scaler_important = MinMaxScaler(feature_range=(0.5, 1))\n",
     "data[important_features] = scaler_important.fit_transform(data[important_features])\n",
     "\n",
-    "# 3. 데이터 분할\n",
+    "# 데이터 분할\n",
     "input_features = features_to_scale + important_features\n",
     "target_variables = ['수평면', '외기온도', '경사면', '모듈온도']\n",
     "X = data[input_features]\n",
     "y = data[target_variables]\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# 4. 모델 학습 및 하이퍼파라미터 튜닝\n",
+    "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.4, random_state=42)\n",
+    "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "# 하이퍼파라미터 튜닝\n",
     "param_grid = {\n",
     "    'n_estimators': [50, 100, 150],\n",
     "    'learning_rate': [0.01, 0.05, 0.1],\n",
@@ -59,61 +42,54 @@
     "    'subsample': [0.8, 0.9, 1],\n",
     "    'max_features': ['sqrt', 'log2', None]\n",
     "}\n",
-    "grid_search = GridSearchCV(GradientBoostingRegressor(random_state=42), param_grid, cv=5, n_jobs=-1, verbose=1)\n",
     "\n",
-    "# 5. 테스트셋에서의 예측\n",
+    "best_params = {}\n",
+    "\n",
+    "for target in target_variables:\n",
+    "    grid_search = GridSearchCV(GradientBoostingRegressor(random_state=42), param_grid, cv=5, n_jobs=-1, verbose=1)\n",
+    "    grid_search.fit(X_train, y_train[target])\n",
+    "    best_params[target] = grid_search.best_params_\n",
+    "\n",
+    "# 최적의 하이퍼파라미터로 조기 종료를 적용하여 모델 학습 및 평가\n",
+    "test_errors = {}\n",
     "predictions = {}\n",
     "for target in target_variables:\n",
-    "    grid_search.fit(X_train, y_train[target])\n",
-    "    predictions[target] = grid_search.predict(X_test)\n",
+    "    min_val_error = float(\"inf\")\n",
+    "    error_going_up = 0\n",
+    "    gbr = GradientBoostingRegressor(**best_params[target], random_state=42)\n",
+    "    for n_estimators in range(1, 120):\n",
+    "        gbr.n_estimators = n_estimators\n",
+    "        gbr.fit(X_train, y_train[target])\n",
+    "        y_pred_val = gbr.predict(X_val)\n",
+    "        val_error = mean_squared_error(y_val[target], y_pred_val)\n",
+    "        if val_error < min_val_error:\n",
+    "            min_val_error = val_error\n",
+    "            error_going_up = 0\n",
+    "        else:\n",
+    "            error_going_up += 1\n",
+    "            if error_going_up == 10:\n",
+    "                break  # 조기 종료\n",
+    "    y_pred_test = gbr.predict(X_test)\n",
+    "    predictions[target] = gbr.predict(X_test)\n",
+    "    test_errors[target] = mean_squared_error(y_test[target], y_pred_test)\n",
     "\n",
-    "# 예측 결과와 실제 값 비교\n",
+    "print(test_errors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "comparison_dfs = {}\n",
     "for target in target_variables:\n",
     "    comparison_dfs[target] = pd.DataFrame({\n",
     "        f\"Actual {target}\": y_test[target],\n",
     "        f\"Predicted {target}\": predictions[target]\n",
-    "    })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Actual 외기온도  Predicted 외기온도\n",
-      "1318         24.2       24.969775\n",
-      "899          43.0       41.315395\n",
-      "439          24.5       26.471294\n",
-      "560          23.9       29.403372\n",
-      "433          24.6       25.136857\n",
-      "      Actual 수평면  Predicted 수평면\n",
-      "1318         0.0       0.286919\n",
-      "899        626.0     554.205602\n",
-      "439         42.0      61.468814\n",
-      "560         33.0     140.669069\n",
-      "433          0.0       2.910868\n",
-      "      Actual 모듈온도  Predicted 모듈온도\n",
-      "1318         22.8       24.193406\n",
-      "899          52.2       46.031512\n",
-      "439          22.8       24.467112\n",
-      "560          23.0       27.138005\n",
-      "433          23.0       23.951652\n",
-      "      Actual 경사면  Predicted 경사면\n",
-      "1318         0.0       6.736264\n",
-      "899        674.0     502.709700\n",
-      "439         27.0      44.048440\n",
-      "560         32.0     111.688614\n",
-      "433          0.0      15.789200\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 예: '외기온도'에 대한 비교 결과 출력\n",
+    "    })\n",
+    "\n",
+    "# 예: '외기온도', '수평면', '모듈온도', '경사면'에 대한 비교 결과 출력\n",
     "print(comparison_dfs['외기온도'].head())\n",
     "print(comparison_dfs['수평면'].head())\n",
     "print(comparison_dfs['모듈온도'].head())\n",
