예측 알고리즘에 필요한 태양광 발전 및 부하량 리스트 생성

--- a/gist_campus_ems.ipynb
+++ b/gist_campus_ems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,29 +84,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1318</th>\n",
+       "      <th>439</th>\n",
        "      <td>0.3</td>\n",
-       "      <td>0.5</td>\n",
+       "      <td>0.8</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.285714</td>\n",
+       "      <td>0.571429</td>\n",
        "      <td>0.833333</td>\n",
-       "      <td>0.085481</td>\n",
-       "      <td>0.048387</td>\n",
-       "      <td>0.978261</td>\n",
+       "      <td>0.265264</td>\n",
+       "      <td>0.290323</td>\n",
+       "      <td>0.652174</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      강수확률  일최저기온  하늘상태  일최고기온     습도    풍향  \\\n",
-       "1318          0.3           0.5         1.0      0.285714  0.833333  0.085481   \n",
+       "     강수확률  일최저기온  하늘상태  일최고기온     습도    풍향  \\\n",
+       "439          0.3           0.8         1.0      0.571429  0.833333  0.265264   \n",
        "\n",
-       "        풍속      time  \n",
-       "1318  0.048387  0.978261  "
+       "       풍속      time  \n",
+       "439  0.290323  0.652174  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,21 +131,21 @@
        "array([8.99885641])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# * 예측한 태양광 발전량\n",
-    "res = env_pred_model.predict(test_x) # 기상 데이터 -> 환경감시 데이터\n",
-    "res = solar_pred_model.predict(res) # 환경감시 데이터 -> 태양광 발전량 데이터\n",
-    "res"
+    "res_solar = env_pred_model.predict(test_x) # 기상 데이터 -> 환경감시 데이터\n",
+    "res_solar = solar_pred_model.predict(res_solar) # 환경감시 데이터 -> 태양광 발전량 데이터\n",
+    "res_solar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,36 +188,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1318</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>439</th>\n",
+       "      <td>2.2</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      축구장  학생회관  중앙창고  학사과정  다산빌딩  시설관리동  대학C동  동물실험동  중앙도서관  LG도서관  신재생에너지동  \\\n",
-       "1318  0.0   0.0   0.0   0.0   0.0    0.0   0.0    0.0    0.0    0.0      0.0   \n",
+       "     축구장  학생회관  중앙창고  학사과정  다산빌딩  시설관리동  대학C동  동물실험동  중앙도서관  LG도서관  신재생에너지동  \\\n",
+       "439  2.2   1.5   0.9   0.9   0.8    2.2   0.7    1.6    1.0    1.2      3.0   \n",
        "\n",
-       "      삼성환경동  중앙연구기기센터  산업협력관  기숙사 B동  \n",
-       "1318    0.0       0.0    0.0     0.0  "
+       "     삼성환경동  중앙연구기기센터  산업협력관  기숙사 B동  \n",
+       "439    2.0       3.7    4.8     2.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,36 +269,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1318</th>\n",
-       "      <td>22</td>\n",
+       "      <th>439</th>\n",
+       "      <td>7</td>\n",
        "      <td>25.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>False</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>24.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      time  1시간기온  1시간강수량  일최고기온  일최저기온  weekday_Friday  weekday_Monday  \\\n",
-       "1318    22   25.0     0.0   29.0   21.0           False           False   \n",
+       "     time  1시간기온  1시간강수량  일최고기온  일최저기온  weekday_Friday  weekday_Monday  \\\n",
+       "439     7   25.0     0.0   31.0   24.0           False           False   \n",
        "\n",
-       "      weekday_Saturday  weekday_Sunday  weekday_Thursday  weekday_Tuesday  \\\n",
-       "1318             False           False             False            False   \n",
+       "     weekday_Saturday  weekday_Sunday  weekday_Thursday  weekday_Tuesday  \\\n",
+       "439             False           False             False             True   \n",
        "\n",
-       "      weekday_Wednesday  \n",
-       "1318               True  "
+       "     weekday_Wednesday  \n",
+       "439              False  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -361,27 +361,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>164.4</td>\n",
-       "      <td>456.3</td>\n",
-       "      <td>430.2</td>\n",
-       "      <td>483.0</td>\n",
-       "      <td>138.4</td>\n",
-       "      <td>280.7</td>\n",
-       "      <td>35.7</td>\n",
-       "      <td>54.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>120.7</td>\n",
+       "      <td>429.8</td>\n",
+       "      <td>413.9</td>\n",
+       "      <td>482.4</td>\n",
+       "      <td>138.1</td>\n",
+       "      <td>263.5</td>\n",
+       "      <td>32.8</td>\n",
+       "      <td>57.5</td>\n",
+       "      <td>87.8</td>\n",
+       "      <td>49.8</td>\n",
        "      <td>...</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>41.9</td>\n",
-       "      <td>40.6</td>\n",
-       "      <td>30.9</td>\n",
-       "      <td>30.5</td>\n",
-       "      <td>29.7</td>\n",
-       "      <td>56.4</td>\n",
-       "      <td>22.2</td>\n",
-       "      <td>70.2</td>\n",
-       "      <td>18.6</td>\n",
+       "      <td>36.2</td>\n",
+       "      <td>30.2</td>\n",
+       "      <td>27.6</td>\n",
+       "      <td>32.3</td>\n",
+       "      <td>32.5</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>51.1</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>47.6</td>\n",
+       "      <td>21.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -390,34 +390,34 @@
       ],
       "text/plain": [
        "   중앙P/P_석사  전기전자컴퓨터공학동_석사  신소재공학_석사  생명과학동_석사  기계공학동_석사  LG도서관_석사  창업B동_석사  \\\n",
-       "0     164.4          456.3     430.2     483.0     138.4     280.7     35.7   \n",
+       "0     120.7          429.8     413.9     482.4     138.1     263.5     32.8   \n",
        "\n",
        "   금호관_석사  냉각수순환펌프1,2,3_석사  냉각수순환펌프4,5,6_석사  ...  대학B동(E)_학사  대학기숙사A동(E)_학사  \\\n",
-       "0    54.3              0.0              0.0  ...        42.0           41.9   \n",
+       "0    57.5             87.8             49.8  ...        36.2           30.2   \n",
        "\n",
        "   학사P/P(E)_학사  제2학생회관(E)_학사  교원아파트(E)_학사  대학C동(E)_학사  중앙연구기기센터(E)_학사  \\\n",
-       "0         40.6          30.9         30.5        29.7            56.4   \n",
+       "0         27.6          32.3         32.5        22.0            51.1   \n",
        "\n",
        "   대학A동(E)_학사  다산빌딩(E)_학사  산학협력연구동(E)_학사  \n",
-       "0        22.2        70.2           18.6  \n",
+       "0        19.0        47.6           21.5  \n",
        "\n",
        "[1 rows x 42 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# * 예측한 전기 부하량\n",
-    "res = energy_pred_model.predict(test_x)\n",
-    "res"
+    "res_load = energy_pred_model.predict(test_x)\n",
+    "res_load"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -466,28 +466,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1318</th>\n",
-       "      <td>163.8</td>\n",
-       "      <td>436.0</td>\n",
-       "      <td>426.1</td>\n",
-       "      <td>517.1</td>\n",
-       "      <td>138.7</td>\n",
-       "      <td>266.2</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>51.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>439</th>\n",
+       "      <td>113.5</td>\n",
+       "      <td>457.7</td>\n",
+       "      <td>403.2</td>\n",
+       "      <td>489.8</td>\n",
+       "      <td>125.6</td>\n",
+       "      <td>285.7</td>\n",
+       "      <td>27.3</td>\n",
+       "      <td>53.3</td>\n",
+       "      <td>214.5</td>\n",
+       "      <td>138.3</td>\n",
        "      <td>...</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>40.6</td>\n",
-       "      <td>39.9</td>\n",
-       "      <td>33.3</td>\n",
-       "      <td>31.5</td>\n",
-       "      <td>65.6</td>\n",
-       "      <td>27.7</td>\n",
-       "      <td>65.4</td>\n",
-       "      <td>18.1</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>36.6</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>31.6</td>\n",
+       "      <td>33.4</td>\n",
+       "      <td>49.1</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>46.7</td>\n",
+       "      <td>20.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -495,22 +495,22 @@
        "</div>"
       ],
       "text/plain": [
-       "      중앙P/P_석사  전기전자컴퓨터공학동_석사  신소재공학_석사  생명과학동_석사  기계공학동_석사  LG도서관_석사  \\\n",
-       "1318     163.8          436.0     426.1     517.1     138.7     266.2   \n",
+       "     중앙P/P_석사  전기전자컴퓨터공학동_석사  신소재공학_석사  생명과학동_석사  기계공학동_석사  LG도서관_석사  창업B동_석사  \\\n",
+       "439     113.5          457.7     403.2     489.8     125.6     285.7     27.3   \n",
        "\n",
-       "      창업B동_석사  금호관_석사  냉각수순환펌프1,2,3_석사  냉각수순환펌프4,5,6_석사  ...  대학B동(E)_학사  \\\n",
-       "1318     49.0    51.1              0.0              0.0  ...        46.0   \n",
+       "     금호관_석사  냉각수순환펌프1,2,3_석사  냉각수순환펌프4,5,6_석사  ...  대학B동(E)_학사  대학기숙사A동(E)_학사  \\\n",
+       "439    53.3            214.5            138.3  ...        39.3           23.3   \n",
        "\n",
-       "      대학기숙사A동(E)_학사  학사P/P(E)_학사  제2학생회관(E)_학사  교원아파트(E)_학사  대학C동(E)_학사  \\\n",
-       "1318           39.0         40.6          39.9         33.3        31.5   \n",
+       "     학사P/P(E)_학사  제2학생회관(E)_학사  교원아파트(E)_학사  대학C동(E)_학사  중앙연구기기센터(E)_학사  \\\n",
+       "439         36.6          34.0         31.6        33.4            49.1   \n",
        "\n",
-       "      중앙연구기기센터(E)_학사  대학A동(E)_학사  다산빌딩(E)_학사  산학협력연구동(E)_학사  \n",
-       "1318            65.6        27.7        65.4           18.1  \n",
+       "     대학A동(E)_학사  다산빌딩(E)_학사  산학협력연구동(E)_학사  \n",
+       "439        19.4        46.7           20.5  \n",
        "\n",
        "[1 rows x 42 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,12 +522,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6930.5"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# * 예측 발전량과 부하량을 통해 전기 요금 산출\n",
+    "total_predicted_solar = res_solar.sum().sum()\n",
+    "total_predicted_load = res_load.sum().sum()\n",
+    "\n",
+    "# print(\"Predicted solar power: \", total_predicted_solar)\n",
+    "# print(\"Predicted load: \", total_predicted_load)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# * 예측 발전량과 부하량을 통해 전기 요금 산출"
-   ]
+   "source": []
   }
  ],
  "metadata": {
